Tweak calc max height to avoid scrollbar

--- a/src/app/bank/bank.component.scss
+++ b/src/app/bank/bank.component.scss
@@ -26,6 +26,6 @@
 }
 
 .bank-content {
-    max-height: calc(100vh - 200px); /* Adjust based on your sticky header height */
+    max-height: calc(100vh - 245px); /* Adjust based on your sticky header height */
     overflow-y: auto;
 }
